# task-flow-api

./: .env.example  README.md  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: efb1ca4ee07a_initial.py
app/: main.py
app/task_flow_api/api/: deps.py  projects.py
app/task_flow_api/models/: __init__.py  comment.py  enums.py  project.py  project_member.py  task.py
app/task_flow_api/schemas/: project.py
app/task_flow_api/services/: project.py
